--- a/seller/templates/addproduct.html
+++ b/seller/templates/addproduct.html
@@ -102,15 +102,15 @@
                       {% csrf_token %}
                     <div class="form-group">
                       <label for="exampleInputName1">Name</label>
-                      <input type="text" class="form-control" id="exampleInputName1" placeholder="Name of product" name="title">
+                      <input type="text" class="form-control" id="exampleInputName1" placeholder="Name of product" name="title" required>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputName2">SKU</label>
-                        <input type="text" class="form-control" id="exampleInputName1" placeholder="Stock Keeping Unit eg:123456" name="sku">
+                        <input type="text" class="form-control" id="exampleInputName1" placeholder="Stock Keeping Unit eg:123456" name="sku" required>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputName3">Brand</label>
-                        <input type="text" class="form-control" id="exampleInputName1" placeholder="Brand name" name="brand">
+                        <input type="text" class="form-control" id="exampleInputName1" placeholder="Brand name" name="brand" required>
                     </div>
 
                     <div class="form-group">
@@ -119,7 +119,7 @@
                           <div class="input-group-prepend">
                             <span class="input-group-text bg-primary text-white">&#8373;</span>
                           </div>
-                          <input type="number" class="form-control" id="theprice" placeholder="Price per one" name="price">
+                          <input type="number" class="form-control" id="theprice" placeholder="Price per one" name="price" required>
                           <div class="input-group-append">
                             <span class="input-group-text">.00</span>
                           </div>
@@ -128,7 +128,7 @@
                     
                     <div class="form-group">
                       <label for="exampleSelectGender">Category</label>
-                        <select class="form-control" id="exampleSelectGender" name="cat">
+                        <select class="form-control" id="exampleSelectGender" name="cat" required>
                         {% for cat in allcat %}
                           <option value="{{cat.name}}">{{cat.name}}</option>
                         {% endfor %}
@@ -138,7 +138,7 @@
                       <label>Product image</label>
                       <input type="file" name="img" class="file-upload-default">
                       <div class="input-group col-xs-12">
-                        <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
+                        <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image" required>
                         <span class="input-group-append">
                           <button class="file-upload-browse btn btn-primary" type="button">Upload</button>
                         </span>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="form-group">
                       <label for="exampleTextarea1">Product description</label>
-                      <textarea class="form-control" id="exampleTextarea1" rows="4" name="desc"></textarea>
+                      <textarea class="form-control" id="exampleTextarea1" rows="4" name="desc" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary mr-2">Submit</button>
                     
