--- a/seller/templates/dashboard.html
+++ b/seller/templates/dashboard.html
@@ -7,14 +7,14 @@
               <div class="row">
                 <div class="col-12 col-xl-8 mb-4 mb-xl-0">
                   <h3 class="font-weight-bold">Welcome {{request.user.username}}</h3>
-                  <h6 class="font-weight-normal mb-0">Time to increase your <span class="text-primary">sales and revenue</span></h6>
+                  <h6 class="font-weight-normal mb-0">Time to increase your <span class="text-primary">sales and earlings</span></h6>
                 </div>
                 
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-6 grid-margin stretch-card">
+            {% comment %} <div class="col-md-6 grid-margin stretch-card">
               <div class="card tale-bg">
                 <div class="card-people mt-auto">
                   <img src="/static/seller/images/dashboard/people.svg" alt="people">
@@ -31,30 +31,39 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-6 grid-margin transparent">
+            </div> {% endcomment %}
+            <div class="col-md-12 grid-margin transparent">
               <div class="row">
-                <div class="col-md-6 mb-4 stretch-card transparent">
+                <div class="col-md-4 mb-4 stretch-card transparent">
                   <div class="card card-tale">
                     <div class="card-body">
-                      <p class="mb-4">Today’s Bookings</p>
-                      <p class="fs-30 mb-2">4006</p>
+                      <p class="mb-4">Today’s Earnings</p>
+                      <p class="fs-30 mb-2">{{request.user.earning}}</p>
                       <p>10.00% (30 days)</p>
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 mb-4 stretch-card transparent">
-                  <div class="card card-dark-blue">
+                <div class="col-md-4 mb-4 stretch-card transparent">
+                  <div class="card card-light-danger">
                     <div class="card-body">
-                      <p class="mb-4">Total Bookings</p>
-                      <p class="fs-30 mb-2">61344</p>
+                      <p class="mb-4">Total Products</p>
+                      <p class="fs-30 mb-2">{{allpro |length }}</p>
                       <p>22.00% (30 days)</p>
                     </div>
                   </div>
                 </div>
+                <div class="col-md-4 mb-4 stretch-card transparent">
+                  <div class="card card-dark-blue">
+                    <div class="card-body">
+                      <p class="mb-4">Top Products</p>
+                      <p class="fs-30 mb-2">{{toppro | length}}</p>
+                      {% comment %} <p>2.00% (30 days)</p> {% endcomment %}
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="row">
-                <div class="col-md-6 mb-4 mb-lg-0 stretch-card transparent">
+              {% comment %} <div class="row">
+                <div class="col-md-4 mb-4 mb-lg-0 stretch-card transparent">
                   <div class="card card-light-blue">
                     <div class="card-body">
                       <p class="mb-4">Number of Meetings</p>
@@ -62,8 +71,8 @@
                       <p>2.00% (30 days)</p>
                     </div>
                   </div>
-                </div>
-                <div class="col-md-6 stretch-card transparent">
+                </div> {% endcomment %}
+                {% comment %} <div class="col-md-6 stretch-card transparent">
                   <div class="card card-light-danger">
                     <div class="card-body">
                       <p class="mb-4">Number of Clients</p>
@@ -71,8 +80,8 @@
                       <p>0.22% (30 days)</p>
                     </div>
                   </div>
-                </div>
-              </div>
+                </div> {% endcomment %}
+              {% comment %} </div> {% endcomment %}
             </div>
           </div>
 
@@ -307,62 +316,39 @@
               <div class="card">
                 <div class="card-body">
                   <p class="card-title mb-0">Top Products</p>
+                  {% if notnone %}
                   <div class="table-responsive">
                     <table class="table table-striped table-borderless">
                       <thead>
                         <tr>
                           <th>Product</th>
                           <th>Price</th>
-                          <th>Date</th>
-                          <th>Status</th>
+                          <th>Category</th>
+                          <th>Order(s)</th>
                         </tr>  
                       </thead>
                       <tbody>
+                        {% for p in toppro %}
                         <tr>
-                          <td>Search Engine Marketing</td>
-                          <td class="font-weight-bold">$362</td>
-                          <td>21 Sep 2018</td>
-                          <td class="font-weight-medium"><div class="badge badge-success">Completed</div></td>
+                          <td>{{p.title}}</td>
+                          <td class="font-weight-bold">&#8373; {{p.price}} / one</td>
+                          <td>{{p.cat}}</td>
+                          <td>{{p.score}}</td>
                         </tr>
-                        <tr>
-                          <td>Search Engine Optimization</td>
-                          <td class="font-weight-bold">$116</td>
-                          <td>13 Jun 2018</td>
-                          <td class="font-weight-medium"><div class="badge badge-success">Completed</div></td>
-                        </tr>
-                        <tr>
-                          <td>Display Advertising</td>
-                          <td class="font-weight-bold">$551</td>
-                          <td>28 Sep 2018</td>
-                          <td class="font-weight-medium"><div class="badge badge-warning">Pending</div></td>
-                        </tr>
-                        <tr>
-                          <td>Pay Per Click Advertising</td>
-                          <td class="font-weight-bold">$523</td>
-                          <td>30 Jun 2018</td>
-                          <td class="font-weight-medium"><div class="badge badge-warning">Pending</div></td>
-                        </tr>
-                        <tr>
-                          <td>E-Mail Marketing</td>
-                          <td class="font-weight-bold">$781</td>
-                          <td>01 Nov 2018</td>
-                          <td class="font-weight-medium"><div class="badge badge-danger">Cancelled</div></td>
-                        </tr>
-                        <tr>
-                          <td>Referral Marketing</td>
-                          <td class="font-weight-bold">$283</td>
-                          <td>20 Mar 2018</td>
-                          <td class="font-weight-medium"><div class="badge badge-warning">Pending</div></td>
-                        </tr>
-                        <tr>
-                          <td>Social media marketing</td>
-                          <td class="font-weight-bold">$897</td>
-                          <td>26 Oct 2018</td>
-                          <td class="font-weight-medium"><div class="badge badge-success">Completed</div></td>
-                        </tr>
+                        {% endfor %}
                       </tbody>
                     </table>
                   </div>
+                  {% endif %}
+
+                  {% if none %}
+                  <br>
+                  <br>
+                  <div style="text-align:center; color:red;">
+                    <p>You have no top products; top products have 3 or more orders.</p>
+                  </div>
+                  {% endif %}
+
                 </div>
               </div>
             </div>
